--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,11 @@ actix-http = "=3.0.0-beta.8"
 config = "0.11.0"
 uuid = { version = "0.8.1", features = ["v4"] }
 chrono = "0.4.15"
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.2.4"
+tracing-actix-web = "0.4.0-beta.8"
 
 [dependencies.sqlx]
 version = "0.5.5"
@@ -30,5 +35,6 @@ features = [ "runtime-actix-rustls", "macros",
 
 [dev-dependencies]
 actix-rt = "2"
+once_cell = "1.8.0"
 reqwest = "0.11"
 tokio = "1"
